<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Summon</string>
    <string name="activity_setting">Summon settings</string>
    <string name="ui_search_hint">App, contact&#8230;</string>
    <string name="ui_item_search">Search for</string>
    <string name="ui_item_phone">Call</string>
    <string name="ui_item_contact_hint_separator">|</string>
    <string name="ui_item_contact_hint_message">Message</string>
    <string name="ui_item_contact_hint_call">Call</string>

    <string name="title_ui">UI Settings</string>
    <string name="title_history">History Settings</string>
    <string name="title_providers">Providers Selection</string>
    <string name="menu_settings">Phone Settings</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_favorites_empty">No favorites yet.</string>

    <string name="ui_empty_title">Welcome to <b>Summon</b>!</string>
    <string name="ui_empty_title_search">Search for anything</string>
    <string name="ui_empty_section_search">Whether an application or a contact, it is but a few keystrokes away.</string>
    <string name="ui_empty_title_fast">Fast history access</string>
    <string name="ui_empty_section_fast">Why wait for results when you can get everything right now?</string>
    <string name="ui_empty_title_magic">See magic happens</string>
    <string name="ui_empty_section_magic">Summon learns from your habits, and improve over time to be even faster and smarter.</string>

    <string name="menu_clear">Clear</string>

    <string name="toggles_desc">Enable toggles (wifi, bluetooth)</string>
    <string name="toggles_name">Toggles</string>

    <string name="aliases_desc">Enable aliases (convenience shortcuts)</string>
    <string name="aliases_name">Aliases</string>

    <string name="apps_desc">Search in my Applications</string>
    <string name="apps_name">Applications</string>

    <string name="contacts_desc">Search in my Contacts</string>
    <string name="contacts_name">Contacts</string>

    <string name="search_desc">Enable Google Web Search</string>
    <string name="search_name">Google search</string>

    <string name="settings_desc">Search in my phone Settings</string>
    <string name="settings_name">Settings</string>

    <string name="phone_desc">Direct dialer for phone numbers</string>
    <string name="phone_name">Phone</string>
</resources>
