<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings" >

    <PreferenceCategory android:title="@string/title_ui" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="invert-ui"
            android:summary="Put search box on top"
            android:title="Invert UI" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="small-screen"
            android:summary="Hide ActionBar in landscape"
            android:title="Small Screen Mode" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_providers" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-apps"
            android:summary="@string/apps_desc"
            android:title="@string/apps_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-contacts"
            android:summary="@string/contacts_desc"
            android:title="@string/contacts_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-settings"
            android:summary="@string/settings_desc"
            android:title="@string/settings_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-toggles"
            android:summary="@string/toggles_desc"
            android:title="@string/toggles_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-alias"
            android:summary="@string/aliases_desc"
            android:title="@string/aliases_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable-search"
            android:summary="@string/search_desc"
            android:title="@string/search_name" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>